Seperation of tags bar into its' own component and dark mode fixes

--- a/styles/dark-mode.css
+++ b/styles/dark-mode.css
@@ -22,7 +22,7 @@ html.casper body.dark .post-feed {
 
 html.casper body.dark .post-card,
 html.casper body.dark .post-card:hover {
-  border-bottom-color: rgb(45, 49, 57);
+  border-bottom-color: rgb(27, 29, 34);
 }
 
 html.casper body.dark .author-profile-image {
